# masque

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/masque/: Cargo.toml
crates/masque/examples/: connect_udp_proxy.rs  udp_echo_client.rs  udp_echo_server.rs
crates/masque/src/: association.rs  capsule.rs  capsule_protocol.rs  client.rs  config.rs  connect_udp.rs  datagram.rs  datagram_capsule.rs  error.rs  lib.rs  quic_varint.rs  server.rs  settings.rs  tls.rs  types.rs
crates/masque/tests/: capsule_parser.rs  datagram_capsule_stream.rs  h3_connection.rs  integration_test.rs
crates/masque/tests/common/: mod.rs
docs/superpowers/plans/: 2026-07-04-quic-varint-utility.md  2026-07-10-connect-udp-request.md
docs/superpowers/specs/: 2026-07-04-quic-varint-utility-design.md  2026-07-10-connect-udp-request-design.md
examples/: connect_udp_proxy.rs  udp_echo_client.rs  udp_echo_server.rs
tests/: integration_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
