[package]
name = "masque"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A Rust library for MASQUE protocols (CONNECT-UDP, CONNECT-IP, CONNECT-Ethernet)."
readme = "../../README.md"
publish = false

[features]
default = []
# HTTP/3 transport scaffolding using Quinn, h3, and rustls.
h3 = [
    "dep:quinn",
    "dep:h3",
    "dep:h3-quinn",
    "dep:rustls",
    "dep:tokio",
    "dep:bytes",
    "dep:http",
]
# Test-only helpers such as self-signed certificate generation and a
# certificate-verification-skipping client config. This implies the `h3`
# feature because the helpers depend on Quinn/rustls types. Never enable this
# in production builds.
test-utils = ["h3", "dep:rcgen"]

[dependencies]
# Percent-encoding for CONNECT-UDP URI template query values.
percent-encoding = "2.3.1"
# QUIC transport. Required by the optional `h3` feature.
quinn = { version = "0.11", optional = true }
# HTTP/3 implementation. Required by the optional `h3` feature.
h3 = { version = "0.0.8", optional = true }
# h3 driver for Quinn. Pinned to 0.0.10 because 0.0.8 is incompatible with
# quinn 0.11.11. The `datagram` feature is required for HTTP/3 Datagrams
# (RFC 9297), which CONNECT-UDP uses.
h3-quinn = { version = "0.0.10", optional = true, features = ["datagram"] }
# TLS 1.3 for QUIC handshakes. Required by the optional `h3` feature.
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
# Async runtime used by the `h3` feature examples and tests.
tokio = { version = "1", optional = true, features = ["rt", "macros", "sync", "time"] }
# Self-signed certificate generation for tests. Required by `test-utils`.
rcgen = { version = "0.13", optional = true }
# Byte buffer type used by h3 request/response bodies.
bytes = { version = "1", optional = true }
# HTTP request/response types used by the `h3` feature public API and tests.
http = { version = "1", optional = true }

[dev-dependencies]

[package.metadata.docs.rs]
features = ["h3"]
